Bug 1330252, try to avoid flooding child process with repeated key events, r=masayuki

--HG--
extra : rebase_source : 53241a14eae10852024d68837d377b91a2f7fbec